@@ -1,11 +1,11 @@
 Package: Rmpfr
 Title: R MPFR - Multiple Precision Floating-Point Reliable
 Version: 0.7-2
-Date: 2018-08-15
+Date: 2018-10-26
 DateNote: Previous CRAN version 0.7-1 on 2018-07-24
 Type: Package
-Author: Martin Maechler
-Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
+Authors@R: c(person("Martin","Maechler", role=c("aut","cre"), email="maechler@stat.math.ethz.ch", comment = c(ORCID = "0000-0002-8685-9910"))
+	   )
 SystemRequirements: gmp (>= 4.2.3), mpfr (>= 3.0.0)
 SystemRequirementsNote: 'MPFR' (MP Floating-Point Reliable Library,
         http://mpfr.org/) and 'GMP' (GNU Multiple Precision library,
